# ShellWeDance

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
shell-we-dance-ps/: Cargo.toml
shell-we-dance-ps/src/: lib.rs  ps_analyzer.rs  ps_decode.rs  ps_indicator.rs
wasm/: Cargo.toml  README.md  build.rs  index.html
wasm/indicators/: manifest.json  ps_indicator_ad_enumeration.yaml  ps_indicator_base64_conversion.yaml  ps_indicator_binary_via_outfile.yaml  ps_indicator_compressed_file_manipulation.yaml  ps_indicator_critical_registry_path.yaml  ps_indicator_downgrade_attack.yaml  ps_indicator_eventlog_etw_manipulation.yaml  ps_indicator_file_download_via_web_client.yaml  ps_indicator_ftp_usage.yaml  ps_indicator_fw_rule_creation.yaml  ps_indicator_highly_suspicious_keywords.yaml  ps_indicator_local_admin_enumeration.yaml  ps_indicator_local_user_account_creation.yaml  ps_indicator_long_base64_string.yaml  ps_indicator_ms_defender_exclusion_path.yaml  ps_indicator_ms_defender_registry_path.yaml  ps_indicator_notable_computer_machine_account.yaml  ps_indicator_notable_console_behavior.yaml  ps_indicator_notable_credential_ref.yaml  ps_indicator_notable_dll_file.yaml  ps_indicator_notable_env_variable.yaml  ps_indicator_notable_invoke_expression.yaml  ps_indicator_notable_sccm.yaml  ps_indicator_overly_large_base64_payload.yaml  ps_indicator_potential_data_staging.yaml  ps_indicator_potential_in_memory_decompression.yaml  ps_indicator_ps_remoting.yaml  ps_indicator_registry_modification.yaml  ps_indicator_remarkably_suspicious_keywords.yaml  (+16 more)
wasm/src/: lib.rs
(+59 files in other folders)
