[package]
name = "shell-we-dance-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM build of ShellWeDance PowerShell analyzer for the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
shell-we-dance-ps = { path = "../shell-we-dance-ps" }
anyhow = "1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

